--- a/main.html
+++ b/main.html
@@ -10,7 +10,15 @@
 	<script>
 		function secondHighest(arr) {
 			//Write your code here
-			
+			  if (arr.length < 2 || new Set(arr).size === 1) {
+
+          return -Infinity;
+        }
+
+        arr.sort(function (a, b) {
+          return b - a;
+        });
+        return arr[1];
 		}
 
 		function Main() {
